# DualCube

./: .gitignore  Cargo.toml  README.md  clippy.toml
crates/douconel/: Cargo.toml  README.md
crates/douconel/assets/: blub001k.mtl  blub001k.stl
crates/douconel/src/: douconel.rs  douconel_bevy.rs  douconel_embedded.rs  douconel_io.rs  douconel_petgraph.rs  lib.rs
crates/hutspot/: Cargo.toml  README.md
crates/hutspot/src/: color.rs  consts.rs  draw.rs  geom.rs  graph.rs  lib.rs  math.rs  timer.rs
examples/: amogus.save  ghost.save
src/: dual.rs  graph.rs  layout.rs  main.rs  polycube.rs  render.rs  solutions.rs  ui.rs
